<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mobivault.ui.viewmodel.VerifyOtpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ResetPasswordActivity">
        <include
            layout="@layout/common_header_layout"
            android:id="@+id/commonHeader"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/commonHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_10">
            <com.google.android.material.textview.MaterialTextView
                style="@style/text_header_style_16"
                android:text="@string/email"/>
            <com.google.android.material.textfield.TextInputEditText
               style="@style/text_edittext_style_16"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/text_header_style_16"
                android:text="@string/password"/>
            <com.google.android.material.textfield.TextInputEditText
                style="@style/password_style_text_view"
                android:id="@+id/passwordET"
                android:text="@={viewModel.passsword}"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/text_header_style_16"
                android:text="@string/confirm_password"/>
            <com.google.android.material.textfield.TextInputEditText
                style="@style/password_style_text_view"
                android:id="@+id/confirmPasswordET"
                android:text="@={viewModel.confirmPassword}"/>
            <com.google.android.material.textview.MaterialTextView
                 style="@style/button_style"
                android:text="@string/reset_password"
                android:onClick="@{()->viewModel.validations()}"
                setBackground="@{!viewModel.email.empty&amp;&amp;!viewModel.passsword.empty&amp;&amp;!viewModel.confirmPassword.empty}"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>