<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_white_10dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cameraTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
             android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="@dimen/font_14" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@color/black" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/galleryTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
            android:layout_gravity="center_vertical"
             android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/font_14" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:visibility="visible"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@color/black" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancelCV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="center_vertical"
             android:gravity="center"
            android:visibility="visible"
            android:text="@string/cancel"
            android:textColor="@color/red_color"
            android:textSize="@dimen/font_14" />


    </LinearLayout>
</layout>