<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/transparent"
          android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/topCardViewCv"
                app:strokeWidth="@dimen/dimen_0"
                app:cardBackgroundColor="@color/white"
                  style="@style/CustomCardViewStyle"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                        android:text="@string/edit"
                     android:id="@+id/editTv"
                    style="@style/violet_color_title_txt_style_without_bold"
                    android:padding="@dimen/dimen_10"/>
                <View
                    style="@style/line_view_style"
                     android:id="@+id/lineThreeView"/>


                <com.google.android.material.textview.MaterialTextView
                     android:text="@string/delete"
                    android:textColor="@color/red_color"
                     android:id="@+id/deleteTv"
                    style="@style/violet_color_title_txt_style_without_bold" />
                <View
                    style="@style/line_view_style"

                    android:id="@+id/lineThree"/>

                <com.google.android.material.textview.MaterialTextView
                      android:text="@string/cancel"
                       style="@style/violet_color_title_txt_style_without_bold"
                    android:id="@+id/cancelTv"/>
            </LinearLayout>





        </com.google.android.material.card.MaterialCardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
