<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mobirecord.ui.viewmodel.VerifyOtpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.VerifyOtpActivity">
        <include
            layout="@layout/common_header_layout"
            android:id="@+id/commonHeader"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="@dimen/dimen_10"
            app:layout_constraintTop_toBottomOf="@+id/commonHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
               style="@style/text_header_style_16"
                android:layout_marginBottom="@dimen/dimen_10"
                android:text="@string/verify_your_email"/>
            <com.chaos.view.PinView
                android:id="@+id/otpPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@color/light_gray"
                 android:text="@={viewModel.otp}"
                 app:cursorColor="@color/violet_color"
                app:itemHeight="@dimen/dimen_50"
                app:itemRadius="@dimen/dimen_10"
                app:itemSpacing="@dimen/dimen_10"
                app:itemWidth="@dimen/dimen_50"
                app:lineColor="@color/light_gray"
                app:viewType="rectangle" />
            <com.google.android.material.textview.MaterialTextView
                style="@style/text_style_Violet_16"
                android:text="@string/resend"
                android:gravity="end"
                android:layout_marginTop="@dimen/dimen_10"
                 android:id="@+id/resendTV"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:visibility="visible"
                 android:id="@+id/verifyBTN"
              style="@style/button_style"
                 android:text="@string/verify"
                 setBackground="@{viewModel.otp.length==4}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>